<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IMDBLookup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="movie_title">Title</string>
    <string name="movie_year">Year</string>
    <string name="movie_plot">Plot</string>
    <string name="movie_search">Search</string>
    <string name="director">Director: </string>
    <string name="poster">Poster: </string>
    <string name="country">Country: </string>
    <string name="language">Language: </string>
    <string name="writer">Writer: </string>
    <string name="genre">Genre: </string>
    <string name="runtime">Runtime: </string>
    <string name="rated">RatedL </string>
    <string name="released">Released: </string>
    <string name="awards">Awards: </string>
    <string name="metascore">Metascore: </string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    -    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/ic_drawer</item>
        <item>@drawable/arrow</item>
        <item>@drawable/arrow</item>
        <item>@drawable/arrow</item>
    </array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
