<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:weightSum="1" >
    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:textColor="#71C6FF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_weight="0.5"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="2dip"
        android:paddingTop="6dip"
        android:textColor="#71C6FF"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_weight="0.5" />
        </LinearLayout>
    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/director"
        android:layout_gravity="center"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:weightSum="1" >
    <ImageView
        android:id="@+id/poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/poster"
        android:gravity="center_vertical"
          />


    <TextView
        android:id="@+id/plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />
        </LinearLayout>
    <TextView
    android:id="@+id/rated"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left"
        android:text="@string/rated"
    android:textColor="#5d5d5d"
    android:textStyle="bold" />
    <TextView
    android:id="@+id/released"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left"
        android:text="@string/released"
    android:textColor="#5d5d5d"
    android:textStyle="bold" />
    <TextView
        android:id="@+id/runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/runtime"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/genre"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/writer"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />
    <TextView
    android:id="@+id/language"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:text="@string/language"
    android:gravity="left"
    android:textColor="#5d5d5d"
    android:textStyle="bold" />
    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/country"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />
    <TextView
    android:id="@+id/awards"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="left"
        android:text="@string/awards"
    android:textColor="#5d5d5d"
    android:textStyle="bold" />
    <TextView
        android:id="@+id/metascore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/metascore"
        android:textColor="#5d5d5d"
        android:textStyle="bold" />

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>


    <RatingBar
        android:id="@+id/imdbRating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:isIndicator="true"
        android:numStars="10"
        android:rating="5"
        android:stepSize=".1" />

</LinearLayout>
   </ScrollView>